# habi-api

./: .env.template  .gitignore  README.md  expected_data.json  pyproject.toml  requirements.txt  sql.sql
app/: main.py
config/: database.py  settings.py
querys/: querys.py  sql_data.py
routers/: property.py
tests/: test_main.py  test_property.py
